<resources>
    <string name="app_name">Dico-toori</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Nama</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Masuk</string>
    <string name="action_register">Daftar</string>
    <string name="welcome">"Welcome!"</string>
    <string name="header_welcome">Selamat datang di Dico-toori!</string>
    <string name="subheading_login">Bagikan pengalaman belajar, cerita suksesmu, atau simak bagaimana kisah orang-orang sukses yang belajar disini!</string>
    <string name="register_cta">Daftar disini!</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="login_illust">Login Illustration</string>
    <string name="action_login_guest">Masuk Sebagai Tamu</string>
    <string name="header_register">Silahkan lengkapi data diri dibawah untuk mulai berbagi!</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login_cta">Masuk disini!</string>
    <string name="reg_success_msg">Akun berhasil dibuat, silahkan masuk menggunakan akun tersebut.</string>
    <string name="reg_failed_msg">Akun sudah pernah didaftarkan</string>
    <string name="login_failed_msg">E-mail atau password salah!</string>
    <string name="login_welcome">Selamat datang </string>
    <string name="error_message_password">Password minimal harus 6 kata</string>
    <string name="prompt_hint_password">Silakan masukkan password…</string>
    <string name="prompt_hint_email">Silakan masukkan e-mail…</string>
    <string name="error_message_email">Format e-mail yang dimasukkan belum benar</string>
    <string name="error_message_name">Nama tidak boleh kosong</string>
    <string name="image_button_setting">Image Button Setting</string>
    <string name="logo_image">Logo Image</string>
    <string name="user_profile_image">User profile image</string>
    <string name="nama_user">Nama User</string>
    <string name="logout">Keluar</string>
    <string name="message_for_guest">Mohon maaf, Anda membutuhkan sebuah akun untuk dapat membaca konten pada halaman ini.\n\nNamun anda tetap dapat membagikan cerita Anda, untuk orang lain dengan menekan tombol berbagi atau tombol dibawah ini untuk mendaftar dan mulai membaca!</string>
    <string name="share">Berbagi</string>
    <string name="tamu">Tamu</string>
    <string name="guest">Guest</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="tambahkan_story">Tambahkan Story</string>
    <string name="upload">Unggah</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="camera_button">Camera Button</string>
    <string name="switch_camera_view">Switch Camera View</string>
    <string name="no_permission">Tidak mendapatkan permission.</string>
    <string name="upload_success">Berhasil mengupload kisah</string>
    <string name="upload_failed">Gagal menunggah kisah, silahkan coba lagi</string>
    <string name="no_image">Silahkan masukkan berkas gambar terlebih dahulu.</string>
    <string name="dicoding_sutoori">Dicoding Sutoori</string>
    <string name="setting">Pengaturan</string>
    <string name="story">Kisah</string>
    <string name="sorry_guest">Maaf Tamu</string>
    <string name="fail_load_data">Gagal menampilkan data, mohon coba lagi nanti</string>
    <string name="data_not_available">Mohon maaf, data sedang tidak tersedia.</string>
    <string name="home_menu">Beranda</string>
    <string name="location_menu">Lokasi</string>
    <string name="setting_menu">Pengaturan</string>
    <string name="language">Bahasa</string>
    <string name="error_resources">Style tidak ditemukan. Error: </string>
    <string name="error_parse_style">Gagal parse style</string>
    <string name="cant_load_loc">Tidak bisa memuat lokasi cerita</string>
    <string name="your_location">Lokasi kamu</string>
    <string name="share_loc">Bagikan lokasi?</string>
    <string name="loc_not_found">Lokasi tidak ditemukan. Coba lagi</string>
    <string name="retry">Coba lagi</string>
</resources>