<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/login_illust"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/header_login"
        style="@style/Text.Header3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens16"
        android:text="@string/header_welcome"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/login_image" />

    <TextView
        android:id="@+id/subheader_login"
        style="@style/Text.SubText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens4"
        android:text="@string/subheading_login"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/header_login" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Header4"
        android:text="@string/prompt_email"
        android:layout_marginTop="@dimen/dimens32"
        app:layout_constraintTop_toBottomOf="@id/subheader_login"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <com.naufaldystd.storyapps.utils.component.CustomEmailField
        android:id="@+id/et_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Header4"
        android:text="@string/prompt_password"
        android:layout_marginTop="@dimen/dimens8"
        app:layout_constraintTop_toBottomOf="@id/et_email_text"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <com.naufaldystd.storyapps.utils.component.CustomPasswordField
        android:id="@+id/et_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2" />

    <TextView
        android:id="@+id/cta_register"
        style="@style/Text.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens8"
        android:text="@string/register_cta"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/et_password_text" />

    <TextView
        android:id="@+id/prompt_account"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="@id/cta_register"
        app:layout_constraintEnd_toStartOf="@+id/cta_register"
        app:layout_constraintTop_toTopOf="@+id/cta_register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Text.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/action_login"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_guest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/prompt_account" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_guest"
        style="@style/Text.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/action_login_guest"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimens20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimens20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimens32" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>