<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_detail_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar_add_story"
            layout="@layout/custom_toolbar_add_story" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@android:color/white"
        android:contentDescription="@string/story_image"
        android:scaleType="centerInside"
        android:src="@drawable/ic_upload_image"
        app:layout_constraintDimensionRatio="H,1.5:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camerax"
        style="@style/Text.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimens20"
        android:layout_marginEnd="@dimen/dimens20"
        android:text="@string/camera"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        style="@style/Text.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dimens20"
        android:text="@string/gallery"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camerax"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_camerax"
        app:layout_constraintTop_toTopOf="@+id/btn_camerax" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ideal_solution_column"
        style="@style/TextInputLayoutStyle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi"
        app:boxCornerRadiusBottomEnd="@dimen/dimens12"
        app:boxCornerRadiusBottomStart="@dimen/dimens12"
        app:boxCornerRadiusTopEnd="@dimen/dimens12"
        app:boxCornerRadiusTopStart="@dimen/dimens12"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/check_box_shareloc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:maxLength="255"
            android:maxLines="4"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        style="@style/Text.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dimens20"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/upload"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ideal_solution_column" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimens20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimens20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimens32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dimens32" />

    <CheckBox
        android:id="@+id/check_box_shareloc"
        style="@style/Text.Header4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_loc"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/btn_camerax" />
</androidx.constraintlayout.widget.ConstraintLayout>